# ai-kit-a2ui-core

./: .eslintrc.json  .mcp.json  .npmrc  I18N-IMPLEMENTATION-SUMMARY.md  ISSUE-14-IMPLEMENTATION-REPORT.md  ISSUE-15-PROTOCOL-DIAGRAMS-REPORT.md  ISSUE-20-INTEGRATION-TESTS-REPORT.md  ISSUE-27-IMPLEMENTATION-REPORT.md  ISSUE-32-IMPLEMENTATION-REPORT.md  README.md  issue-14-coverage-output.txt  issue-14-test-output.txt  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsup.config.ts  vitest.config.ts
.ainative/rules/: coding-standards.md  monorepo-standards.md  react-package-standards.md  runtime-package-standards.md  tdd-workflow.md
.changeset/: config.json
a2ui-react/: CNAME  headless.d.ts.map  iframe.html  index.d.ts  index.d.ts.map  project.json
a2ui-react/assets/: Color-YHDXOIA2-DQOiCvL-.js  DocsRenderer-CFRXHY34-QXutYpg-.js  DocsRenderer-CFRXHY34-mryDJknk.js  HooksExamples.stories-8rpgwyq-.js  entry-preview-DZYo23kY.js  iframe-qrkFLk3O.js  preview-DUT1MCr7.js  preview-dq_LTUCQ.js
a2ui-react/hooks/: index.d.ts.map  useA2UIAgent.d.ts  useHumanInTheLoop.d.ts  useHumanInTheLoop.d.ts.map
a2ui-react/stories/: HooksExamples.stories.d.ts.map
docs/: AGENT_SPRINT_SUMMARY.md  API.md  CONTRIBUTING.md  COVERAGE_REPORT.md  ISSUE-22-PERFORMANCE-BENCHMARKS-REPORT.md  PRD.md  QA_PROGRESS_UPDATE.md  QA_REPORT.md  QA_SUMMARY.md
docs/api/: AI_INTELLIGENCE_PROTOCOL_SPECIFICATION.md  API.md  VIDEO_COMPONENTS.md  VIDEO_INTEGRATION_PATTERNS.md  VIDEO_PROTOCOL_SPECIFICATION.md  ai-intelligence-protocol-flow.md  error-handling-flow.md  protocol-flows-index.md  recording-protocol-flow.md  video-call-protocol-flow.md  video-generation-protocol-flow.md
docs/components/: auth-components.md  billing-subscription.md  file-upload.md  notification-center.md
docs/deployment/: STORYBOOK_DEPLOYMENT_SUMMARY.md
docs/development-guides/: AI_IMPLEMENTATION_GUIDE.md  VIDEO_IMPLEMENTATION_GUIDE.md  VIDEO_MIGRATION_GUIDE.md
docs/examples/: analytics-dashboard-example.md
docs/extensions/: A2UI_INSPECTOR_IMPLEMENTATION.md
docs/features/: VIDEO_USE_CASES.md  human-in-the-loop.md  internationalization.md  issue-30-progress-tracking-implementation.md  offline-first-support.md  progressive-rendering.md  real-time-collaboration.md  storybook-enhancement-summary.md
docs/implementation-reports/: issue-31-progress-handlers-report.md  issue-88-human-in-the-loop-report.md
docs/monorepo/: IMPLEMENTATION_REPORT.md  MIGRATION_GUIDE.md  README.md
docs/planning/: AIKIT_VIDEO_INTEGRATION_REQUIREMENTS.md  BACKLOG.md  BACKLOG.md.backup  video-protocol-prd.md
docs/qa/: BEFORE_AFTER_COMPARISON.md  README.md  VIRTUALIZATION_FIX_SUMMARY.md  message-inspector-virtualization-fix.md
docs/quality/: accessibility-testing.md
docs/reports/: CHANGELOG.md  GAP_ANALYSIS_2026-02-08.md  ISSUE-29-IMPLEMENTATION-REPORT.md  ISSUE-39-IMPLEMENTATION-REPORT.md  ISSUE-51-EMAIL-TEMPLATE-BUILDER-IMPLEMENTATION.md  ISSUE-62-KOTLIN-SDK-IMPLEMENTATION-REPORT.md  ISSUE-85-IMPLEMENTATION-SUMMARY.md  ISSUE-86-COAGENTS-IMPLEMENTATION-REPORT.md  ISSUE_9_VALIDATION_SCHEMAS_REPORT.md  ISSUE_CREATION_SUMMARY_2026-02-08.md  issue-21-protocol-compliance-tests-report.md  performance-tracker-timer-fix.md  quaid-scan-2026-06-01.md
scripts/: create-video-protocol-issues.sh  validate-competitive-position.sh
sdks/python/: .gitignore  IMPLEMENTATION_STATUS.md  README.md  pyproject.toml
sdks/python/a2ui/: __init__.py
sdks/python/a2ui/handlers/: __init__.py
sdks/python/a2ui/integrations/: __init__.py
sdks/python/a2ui/transport/: __init__.py
sdks/python/a2ui/types/: __init__.py
sdks/python/a2ui/utils/: __init__.py  json_pointer.py
sdks/python/examples/: basic_json_pointer.py
sdks/python/tests/utils/: test_json_pointer.py
sdks/rust/a2ui-sdk/: .gitignore  Cargo.toml  README.md
sdks/rust/a2ui-sdk/examples/: basic.rs  file_upload.rs
sdks/rust/a2ui-sdk/src/: error.rs  handlers.rs  json_pointer.rs  lib.rs  transport.rs  types.rs
sdks/rust/a2ui-sdk/tests/: error_test.rs  json_pointer_edge_cases_test.rs  json_pointer_test.rs  types_test.rs
src/: index.ts
tests/: monorepo.test.ts
(+259 files in other folders)
