[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "a2ui-python"
version = "0.1.0"
description = "Python SDK for A2UI protocol (v0.9-v0.12) - Zero dependencies"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "AINative Studio", email = "hello@ainative.studio"}
]
keywords = [
    "a2ui",
    "agent-to-ui",
    "ai",
    "json-pointer",
    "websocket",
    "zero-dependencies"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]

dependencies = [
    "websockets>=12.0",
    "aiohttp>=3.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0"
]

[project.urls]
Homepage = "https://github.com/AINative-Studio/ai-kit-a2ui-core"
Documentation = "https://github.com/AINative-Studio/ai-kit-a2ui-core/tree/main/sdks/python"
Repository = "https://github.com/AINative-Studio/ai-kit-a2ui-core.git"
Issues = "https://github.com/AINative-Studio/ai-kit-a2ui-core/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=a2ui",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=85"
]
timeout = 30

[tool.coverage.run]
source = ["a2ui"]
branch = true
omit = [
    "*/tests/*",
    "*/examples/*"
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod"
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
